Update About Page “about-data”

--- a/data/about.yml
+++ b/data/about.yml
@@ -11,18 +11,33 @@ main_content: >-
 
   A complete list of all the subteams and there descriptions can be seen below.
 
+
   This is a brief history of our team:
 
+
   * We became a FIRST Robotics Competition team is 2008-2009, our rookie year.
-  We had just 12 students. * In 2010, our team doubled in size to 24 students. *
-  In 2011, we grew to 34 students. We also competed in two regional
-  championships for the first time. * In 2012, we grew to 40+ students, and got
-  first place in the Girls Generation competition. * In 2013, we grew to 45+
-  students, and created our first climbing robot. * In 2014, we won our first
-  competition, at the Oregon State competition. * In 2015, our team size
-  remained around 45 students. * In 2016, we grew to 50+ students, and won our
-  second competition. * In 2017, we created our first powdercoated robot. * In
-  2018, we won 2 competitions, and qualified for Worlds for the first time.
+  We had just 12 students. 
+
+  * In 2010, our team doubled in size to 24 students. 
+
+  * In 2011, we grew to 34 students. We also competed in two regional
+  championships for the first time. 
+
+  * In 2012, we grew to 40+ students, and got first place in the Girls
+  Generation competition. 
+
+  * In 2013, we grew to 45+ students, and created our first climbing robot. 
+
+  * In 2014, we won our first competition, at the Oregon State competition. 
+
+  * In 2015, our team size remained around 45 students. 
+
+  * In 2016, we grew to 50+ students, and won our second competition. 
+
+  * In 2017, we created our first powdercoated robot. 
+
+  * In 2018, we won 2 competitions, and qualified for Worlds for the first time.
+
 
   These are the seven main subteams that make up our team:
 subteams:
