fix boeing error

--- a/data/Partners.yml
+++ b/data/Partners.yml
@@ -25,7 +25,7 @@ List:
     name: Platt Electric Supply
     url: 'https://www.platt.com/'
   - desc: >-
-      > Boeing is the world's largest aerospace company and leading manufacturer
+      Boeing is the world's largest aerospace company and leading manufacturer
       of commercial jetliners and defense, space and security systems. A top
       U.S. exporter, the company supports airlines and U.S. and allied
       government customers in 150 countries. 
