--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -105,6 +105,7 @@ collections:
     - {label: "Publish Date", name: "date", widget: "datetime"}
     - {label: "Body", name: "body", widget: "markdown"}
     - {label: "Seasons", name: "seasons", widget: "list"}
+    - {label: "Image", name: "image", widget: "image"}
 - name: "posts2018" # Used in routes, e.g., /admin/collections/blog
   label: "Posts 2018" # Used in the UI
   folder: "content/posts/2018" # The path to the folder where the documents are stored
@@ -115,3 +116,4 @@ collections:
     - {label: "Publish Date", name: "date", widget: "datetime"}
     - {label: "Body", name: "body", widget: "markdown"}
     - {label: "Seasons", name: "seasons", widget: "list"}
+    - {label: "Image", name: "image", widget: "image"}
