--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -106,6 +106,7 @@ collections:
     - {label: "Body", name: "body", widget: "markdown"}
     - {label: "Seasons", name: "seasons", widget: "list"}
     - {label: "Image", name: "image", widget: "image"}
+    - {label: "Video", name: "video", widget: "youtube"}
 - name: "posts2018" # Used in routes, e.g., /admin/collections/blog
   label: "Posts 2018" # Used in the UI
   folder: "content/posts/2018" # The path to the folder where the documents are stored
@@ -117,3 +118,4 @@ collections:
     - {label: "Body", name: "body", widget: "markdown"}
     - {label: "Seasons", name: "seasons", widget: "list"}
     - {label: "Image", name: "image", widget: "image"}
+    - {label: "Video", name: "video", widget: "youtube"}
