Update About Page “about-data”

--- a/data/about.yml
+++ b/data/about.yml
@@ -44,7 +44,7 @@ subteams:
   - description: >-
       This team is responsible for creating and managing our excellence during
       robotics competitions. The team will help create our robot strategy, game
-      strategy, and scouting process. In addition, this team leads, our efforts
+      strategy, and scouting process. In addition, this team leads our efforts
       to earn awards at the competitions. This team is a potential fit for a
       wide range of skills.
     image: /images/uploads/competitions.png
