--- a/data/Partners.yml
+++ b/data/Partners.yml
@@ -53,6 +53,12 @@ content: >-
   website, on our tee-shirts, and in our team brochure. 
 
 
+  > To learn more about becoming a supporter of the Skyview StormBots please
+  contact us at: info@StormBots.com. 
+
+
+
+
   \[Thanks to Team 492 Titan Robotics Club for inspiration on reasons to support
   robotics teams]
 Levels:
