Update Partners “partners-data-content”

--- a/data/Partners.yml
+++ b/data/Partners.yml
@@ -34,8 +34,8 @@ content: >-
   holds annual regional and national robot competitions for school and
   community-based teams. These competitions celebrate the creative and
   innovative use of science and technology in solving complex problems. Mentored
-  by working adults from all career fields, students learn that careers in
-  related to science and technology can be fun, exciting, and rewarding.
+  by working adults from all career fields, students learn that careers related
+  to science and technology can be fun, exciting, and rewarding.
 
 
   ## Why me or my company?
@@ -55,8 +55,6 @@ content: >-
 
   > To learn more about becoming a supporter of the Skyview StormBots please
   contact us at: info@StormBots.com. 
-
-
 
 
   \[Thanks to Team 492 Titan Robotics Club for inspiration on reasons to support
