Update Partners “partners-data-content”

--- a/data/Partners.yml
+++ b/data/Partners.yml
@@ -54,7 +54,8 @@ content: >-
 
 
   > To learn more about becoming a supporter of the Skyview StormBots please
-  contact us at: info@StormBots.com. 
+  contact us at: info@StormBots.com. Contributions to the StormBots are
+  tax-deductible. 
 
 
   \[Thanks to Team 492 Titan Robotics Club for inspiration on reasons to support
