--- a/data/partner_content.yml
+++ b/data/partner_content.yml
@@ -1,6 +1,6 @@
 title: 'Get Involved: Invest in the Future!'
 content: >-
-  "## The Problem
+  ## The Problem
 
 
   We live in a society that idolizes entertainment – athletes, musicians, and
@@ -53,7 +53,7 @@ content: >-
 
 
   \[Thanks to Team 492 Titan Robotics Club for inspiration on reasons to support
-  robotics teams]"
+  robotics teams]
 levels:
   - amount: 10
     name: hurricane
