Update Get Involved “partner_content”

--- a/data/partner_content.yml
+++ b/data/partner_content.yml
@@ -47,7 +47,7 @@ content: >-
   website, on our tee-shirts, and in our team brochure. 
 
 
-  To learn more about becoming a supporter of the Skyview StormBots please
+  > To learn more about becoming a supporter of the Skyview StormBots please
   contact us at: info@StormBots.com. Contributions to the StormBots are
   tax-deductible. 
 
