Update Partners “partners”

--- a/data/Partners.yml
+++ b/data/Partners.yml
@@ -1,8 +1,9 @@
 List:
   - desc: >-
       Electrical supply chain with a wide range of products including
-      generators, lighting, tools & fuses. Platt Electric has been a supporter
-      since our team's inception with donated materials and volunteer mentors.
+      generators, lighting, tools, and fuses. Platt Electric has been a
+      supporter since our team's inception with donated materials and volunteer
+      mentors.
     from: 2008-2018
     level: hurricane
     location: 'Vancouver, WA'
