Update Partners “partners”

--- a/data/Partners.yml
+++ b/data/Partners.yml
@@ -232,3 +232,12 @@ List:
     logo: /images/uploads/sga-engineering-logo.png
     name: SGA Engineering
     url: 'http://sgaengineering.com/about.php'
+  - desc: >-
+      We welcome a new sponsor, Jessica Jewelry store which sells jade, pearls &
+      gemstones, with repairs & diamond resetting while you wait.
+    from: '2019'
+    level: torrent
+    location: 'Portland, OR'
+    logo: /images/uploads/jessica-jewlers-image.jpg
+    name: Jessica Jewelers
+    url: 'https://www.facebook.com/pages/Jessica-Jewelers/273609519347133'
